# chatbot-demo

./: Dockerfile  README.md  Taskfile.yml  pyproject.toml
src/: main.py
