[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = "Chatbot demo"
authors = ["ipfans <363344+ipfans@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = { extras = ["openai"], version = "^0.1.0" }
chardet = "^5.2.0"
gptcache = "^0.1.40"
lxml = "^4.9.3"
openapi-schema-pydantic = "^1.2.4"
asyncpg = "^0.28.0"
httpx = "^0.24.1"
xmltodict = "^0.13.0"
uvicorn = "^0.22.0"
httptools = "^0.6.0"
nicegui = "1.3.12"


[tool.poetry.group.dev.dependencies]
fixit = "^2.0.0.post1"
isort = "^5.12.0"
black = "^23.7.0"
flake8 = "^6.1.0"
flake8-async = "^22.11.14"
flake8-comprehensions = "^3.14.0"
flake8-bugbear = "^23.7.10"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "default"
